fix: scroll, green boxes placement, pink box sizing, yellow box overflow and placement

--- a/grid/grid.css
+++ b/grid/grid.css
@@ -7,47 +7,62 @@ a:hover {
   background: var(--deep-blue);
 }
 
-@media only screen and (width > 1280px) and (orientation: landscape) and (hover: hover) {
+@media only screen and (width >= 1280px) and (hover: hover) {
+  html {
+    height: 100%;
+  }
+
   body {
     display: grid;
     gap: 20px;
-    grid-template-columns: 100px repeat(3, 1fr);
-    grid-template-rows: auto repeat(3, 1fr);
-    margin: 15px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr 10fr;
+    max-height: 100%;
   }
 
   header {
     display: grid;
-    grid-area: 1 / 1 / 2 / 4;
+    grid-area: 1 / 1 / 2 / 3;
     border: 5px solid red;
-    align-content: center;
   }
 
   nav {
-    grid-area: 1 / 4 / -1 / 5;
+    grid-area: 1 / 3 / -1 / 4;
     border: 5px solid yellow;
-    position: sticky;
-    top: 0;
-    height: 100vh;
     overflow: hidden;
+    height: 100%;
+  }
+
+  nav > p {
+    font-size: 26px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .main-container {
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    grid-template-rows: auto;
+    grid-area: 2 / 1 / 3 / 3;
+    max-height: 100%;
+    gap: 20px;
   }
 
   main {
-    grid-area: 2 / 2 / -1 / 4;
+    grid-area: 1 / 2 / -1 / 2;
     border: 5px solid pink;
   }
 
   .side-content {
     border: 5px solid green;
-    height: 100%;
     overflow: hidden;
+    height: 100%;
   }
 
   .side-content-container {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     grid-auto-flow: column;
-    grid-area: 2 / 1 / -1 / 2;
     row-gap: 40px;
   }
 }
@@ -56,7 +71,7 @@ a:hover {
   body {
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: auto;
     grid-template-rows: auto;
     margin: 15px;
   }
@@ -83,6 +98,13 @@ a:hover {
     border: 5px solid red;
   }
 
+  .main-container {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: auto;
+    gap: 20px;
+  }
+
   .side-content {
     border: 5px solid green;
     overflow: hidden;
@@ -91,13 +113,12 @@ a:hover {
   .side-content-container {
     display: grid;
     grid-template-columns: 100px 100px 100px;
+    grid-area: 1/ 1/ 2/ -1;
     grid-auto-flow: row;
-    grid-area: 3 / 1 / 4 / -1;
     justify-content: space-between;
   }
 
   main {
     border: 5px solid pink;
-    grid-area: 4 / 1 / 5 / -1;
   }
 }
